Responsive behavior modifications - Fixed sidebar icon jiggle when expanding. - Updated update-to-pro card. - Changed header to column flex direction on mobile layout.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
     padding: 0;
     font-size: 14px;
     background-color: white;
-    border: 1px solid #ff0000;
     transition: margin-left 0.3s ease-in-out;
 }
 
@@ -361,7 +360,7 @@ img {
     gap: 8px;
     border-radius: 16px;
     border: none;
-    justify-content: center;
+    justify-content: left;
     text-align: center;
 }
 
@@ -442,13 +441,18 @@ body:has(.sidebar #sidebar-checkbox:checked) {
     overflow: hidden;
 }
 
-.sidebar:has(#sidebar-checkbox:checked) i {
-    cursor: pointer;
-}
-
 .sidebar:has(#sidebar-checkbox:checked) .card {
     background-color: transparent;
     color: white;
+    padding: 8px;
+    width: 57.6px;
+    /* .sidebar-item.container width */
+}
+
+.sidebar:has(#sidebar-checkbox:checked) .card:hover {
+    background-color: var(--secondary-blue);
+    color: var(--primary-blue);
+    cursor: pointer;
 }
 
 .sidebar:has(#sidebar-checkbox:checked) .counter-badge {
@@ -471,10 +475,9 @@ body:has(.sidebar #sidebar-checkbox:checked) {
     background: #FFD700;
     border-radius: 50%;
     line-height: 24px;
-    /* margin-left: auto; */
     position: fixed;
-    /* left: calc(((240px - 194.4px) / 2) + 8px); */
-    left: calc(240px - (240px - 194.4px) - 12px);
+    left: calc(var(--sb-width) - (var(--sb-width) - 194.4px) - 12px);
+    /* left: sidebar width - left and right spaces - halved badge size */
     transition: transform 0.3s ease-in-out;
 }
 
@@ -492,6 +495,8 @@ body:has(.sidebar #sidebar-checkbox:checked) {
     padding: 24px;
     cursor: default;
     width: calc(4px * 50);
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
 }
 
 .sidebar {
@@ -821,5 +826,9 @@ body:has(.sidebar #sidebar-checkbox:checked) {
         cursor: default;
         background-color: transparent;
         pointer-events: none;
+    }
+
+    .mobile-column {
+        flex-direction: column;
     }
 }
